--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,10 @@
+[build-system]
+requires = ["hatchling"]
+build-backend = "hatchling.build"
+
 [project]
 name = "wsitk-core"
-dynamic = ["version"]
+version = "0.1.0"
 authors = [
   { name="Vlad Popovici", email="popovici@bioxlab.org" },
 ]
@@ -12,12 +16,14 @@ classifiers = [
     "License :: OSI Approved :: MIT License",
     "Operating System :: OS Independent",
 ]
+dependencies = [
+    'openslide-bin >= 4.0.0',
+    'openslide-python >= 1.4.0',
+    'shapely >= 2.0.0'
+]
 
 [project.urls]
 Homepage = "https://github.com/vladpopovici/wsitk-core"
 Issues = "https://github.com/vladpopovici/wsitk-core/issues"
 
-[build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
 
